--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Project Prometheus</title>
+    <link rel="icon" href="assets/icon1.jpg">
 </head>
     <body>
-        <h1>YEEET</h1>
+        <h1>Project Prometheus</h1>
+        <img src="assets/logo.png">
+        <p>test</p>
     </body>
 </html>
