--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
     <body>
         <h1>Project Prometheus</h1>
-        <img src="assets/logo.png">
+        <img src="assets/logo.png" width=500>
         <p>test</p>
+
+
+        <div class="arjun-hello">
+            <img src="assets/icon1.jpg">
+        </div>
     </body>
 </html>
