--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>ADAM IS HERE</h1>
         <img src="assets/logo.png" width=500>
-        <p>test</p>
+        <p>Adam pog</p>
 
 
         <div class="arjun-hello">
