--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
     <title>Project Prometheus</title>
     <link rel="icon" href="assets/icon1.jpg">
 </head>
@@ -12,9 +14,35 @@
         <img src="assets/logo.png" width=500>
         <p>Adam pog</p>
 
+    <!-- CSS references -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hind&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
-        <div class="arjun-hello">
-            <img src="assets/icon1.jpg">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- landing, nav, name -->
+    <section class="landing">
+        <div class="nav">
+            <a class="nav" href="#home">HOME</a>
+            <a class="nav" href="#about">ABOUT US</a>
+            <a class="nav" href="#projects">PROJECTS</a>
+            <a class="nav" href="#articles">ARTICLES</a>
+            <a class="nav" href="#editorials">EDITORIALS</a>
         </div>
-    </body>
+        
+        <div class="name">
+            <h1 class="name">PROMETHEUS</h1>
+            <h2 class="name">PROJECT</h2>
+            <h3 class="name">Ignite the mind. Pass on the torch.</h3>
+        </div>
+
+        
+    </section>
+    <section class="info">
+        <h1 class="info">5 articles written, 69 articles </h1>
+    </section>
+
+</body>
 </html>
