--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Hind&family=Roboto:wght@100&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+
+
 
     <!-- landing, nav, name -->
     <section class="landing">
@@ -33,8 +38,21 @@
             <h3 class="name">Ignite the mind. Pass on the torch.</h3>
         </div>
 
-        
+        <div class="icons">
+            <a class="fa fa-instagram" href="https://henryxiu.com"></a>
+            <a class="fa fa-github" href="instagram.com/arjunswalia"></a>
+            <a class="fa fa-twitter" href="instagram.com/arjunswalia"></a>
+            <a class="fa fa-github-alt" href="instagram.com/arjunswalia"></a>
+
+
+
+        </div>
+
     </section>
+
+
+
+
     <section class="info">
         <h1 class="info">5 articles written, 69 articles </h1>
     </section>
