--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
 
         <div class="icons">
             <a class="fa fa-instagram" href="https://henryxiu.com"></a>
-            <a class="fa fa-github" href="instagram.com/arjunswalia"></a>
-            <a class="fa fa-twitter" href="instagram.com/arjunswalia"></a>
-            <a class="fa fa-github-alt" href="instagram.com/arjunswalia"></a>
-
+            <a class="fa fa-github" href="https://instagram.com/arjunswalia"></a>
+            <a class="fa fa-twitter" href="https://instagram.com/arjunswalia"></a>
 
 
         </div>
